Add more chapters

--- a/tutorial1.ipynb
+++ b/tutorial1.ipynb
@@ -8,14 +8,10 @@
     "What you should know\n",
     "====================\n",
     "\n",
-    "\n",
     "You should know how to edit code in this notebook in your browser. Click on a code cell to edit the code. **Enter** inserts a new line, **Shift-Enter** executes the current cell.\n",
-    "\n",
     "\n",
     "Printing\n",
     "========\n",
-    "\n",
-    "\n",
     "Programming tutorials since the beginning of time have started with a little program called Hello, World! So here it is:\n"
    ]
   },
@@ -32,7 +28,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "If you are using the command line to run programs then type it in with a text editor, save it as hello.py and run it with python3 hello.py\n",
     "\n",
     "Otherwise execute the cells in this notebook using **Shift+Enter**\n",
@@ -78,6 +73,7 @@
    "metadata": {},
    "source": [
     "\n",
+    "\n",
     "When you run this program it prints out:\n"
    ]
   },
@@ -113,6 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     " so the computer prints:\n"
    ]
   },
@@ -190,6 +187,7 @@
    "metadata": {},
    "source": [
     "\n",
+    "\n",
     "And here is the output when the program is run:\n"
    ]
   },
@@ -207,9 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "As you can see, Python can turn your thousand dollar computer into a 5 dollar calculator.\n",
-    "\n",
     "\n",
     "Python has seven basic operations for numbers:\n",
     "\n",
@@ -223,8 +219,6 @@
     "| Remainder | `%` | `14 % 3 == 2` |  |  |  |  |\n",
     "| Addition | `+` | `1 + 2 == 3` |  |  |  |  |\n",
     "| Subtraction | `-` | `4 - 3 == 1` |  |  |  |  |\n",
-    "\n",
-    "\n",
     "\n",
     "Notice that there are two different division rules. If you use `//` then it returns the integer result (`15 // 2 == 7`). If you use `/` then it returns the decimal result (`15 / 2 == 7.5`). The following program show this:\n"
    ]
@@ -249,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "With the output:\n"
    ]
   },
   {
@@ -269,6 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "\n",
     "The order of operations is the same as in math:\n",
     "\n",
@@ -301,13 +296,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that the comment starts with a `#` and lasts till the end of the line. Comments are used to communicate with others who read the program and your future self to make clear what is complicated.\n",
     "\n",
     "\n",
     "Examples\n",
     "========\n",
     "\n",
     "\n",
-    "Most chapters contain examples of the programming features introduced in the chapter. You should at least look over them to see if you understand them. If you don't, you may want to type them in and see what happens. Mess around with them, change them, and see what happens."
+    "Most chapters contain examples of the programming features introduced in the chapter. You should at least look over them to see if you understand them. If you don't, you may want to type them in and see what happens. Mess around with them, change them, and see what happens.\n",
+    "\n",
+    "\n",
+    "Denmark.py\n"
    ]
   },
   {
@@ -325,6 +324,7 @@
    "metadata": {},
    "source": [
     "\n",
+    "\n",
     "Output:\n"
    ]
   },
@@ -340,6 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "\n",
     "School.py\n"
    ]
@@ -376,6 +377,7 @@
    "metadata": {},
    "source": [
     "\n",
+    "\n",
     "Output:\n"
    ]
   },
@@ -405,11 +407,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "Exercises\n",
     "=========\n",
     "\n",
-    "Write a program that prints your full name and your birthday as separate strings.\n"
+    "Write a program that prints your full name and your birthday as separate strings."
    ]
   },
   {
