--- a/tutorial3.ipynb
+++ b/tutorial3.ipynb
@@ -54,11 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(And you thought it couldn't get any worse after turning your computer into a five dollar calculator?) So what does the program do? First it sees the line `a = 0` and makes `a` zero. Then it sees `while a < 10:` and so the computer checks to see if `a < 10`. The first time the computer sees this statement `a` is zero so it is less than 10. In other words while `a` is less than ten the computer will run the indented statements.\n",
     "\n",
-    "(And you thought it couldn't get any worse after turning your computer into a five dollar calculator?) So what does the program do? First it sees the line a = 0 and makes a zero. Then it sees while a < 10: and so the computer checks to see if a < 10. The first time the computer sees this statement a is zero so it is less than 10. In other words while a is less than ten the computer will run the indented statements.\n",
-    "\n",
-    "\n",
-    "Here is another example of the use of while:\n"
+    "Here is another example of the use of while:"
    ]
   },
   {
@@ -100,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I had forgotten to put the : after the while. The error message complained about that problem and pointed out where it thought the problem was with the `SPMquot`^\" . After the problem was fixed here was what I did with the program:\n"
+    "I had forgotten to put the `:` after the while. The error message complained about that problem and pointed out where it thought the problem was with the `^` . After the problem was fixed here was what I did with the program:\n"
    ]
   },
   {
@@ -126,9 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "Notice how print('Total Sum =', s) is only run at the end. The while statement only affects the line that are indented (a.k.a. have spaces at the front). The != means does not equal so while a != 0: means until a is zero run the indented statements that are afterwards. (Note: be consistent, always use spaces or tabs to indent, never mix them.)\n",
+    "Notice how `print('Total Sum =', s)` is only run at the end. The while statement only affects the line that are indented (a.k.a. have spaces at the front). The != means does not equal so `while a != 0:` means until a is zero run the indented statements that are afterwards. (Note: be consistent, always use spaces or tabs to indent, never mix them.)\n",
     "\n",
     "\n",
     "Now that we have while loops, it is possible to have programs that run forever. An easy way to do this is to write a program like this:\n"
@@ -150,7 +146,7 @@
    "source": [
     "\n",
     "\n",
-    "This program will output Help, I'm stuck in a loop. until the heat death of the universe or you stop it. The way to stop it is to hit the Control (or Ctrl) button and `c' (the letter) at the same time. This will kill the program. (Note: sometimes you will have to hit enter after the Control C.)\n",
+    "This program will output Help, I'm stuck in a loop. until the heat death of the universe or you stop it. The way to stop it is to hit the ⬛ (\"interrupt the kernel\") button in the toolbar above. This will stop teh execution of teh current cell.\n",
     "\n",
     "\n",
     "Examples\n",
